[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "example_package_ttluik"
version = "0.0.1"
authors = [{ name = "Torec Luik", email = "t.t.luik@amsterdamumc.nl" }]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TorecLuik/packaging_tutorial.git"